- Option for gliders. Specify 'NoEngines' in the RWP cheat-code box to toggle it for now, or just edit the settings.cfg file.
- An updated continuous spawning log parser.
- Adjust the ballistic trajectory simulation time-step multiplier based on the distance to the target to give improved debug lines/targeting line visuals.
- Also avoid 0 altitude (terrain avoidance) for bodies without solid surfaces.

v1.4.14.1
FIXES
- Fix typo in 2x1 legacy armour panel.
- Fixes missile turret Cost.
- Fixes missile RMB warhead info.
- Fixes NRE with proc armor parts on loading a craft.
- Nukes no longer explode when destroyed (if engineCore = false, so S3R1 Chernobyl functionality still present, just not all the time).
- Account for starting resource cost modifier to part cost, fix discount to reduce up to 500 from cost.
IMPROVEMENTS
- Restores ability to set custom tracer stats in weapon.cfg. Use "tracerOverrideWidth = true" in the cfg to use override values instead of dynamically determined tracer settings.
- BattleDamage fire chance on hit now editable in the settings config.
- Teams:
	- Adds ability to set teams to neutral in team selector/VesselSwitcher/WM.
	- Right clicking on the team button in the Team Selector/WM will toggle non-default teams (A, B, Neutral) neutral status.
	- Right clicking on the [t] button to the right of a vessel button in the VS will open the Team Selector.
	- Left click will switch to next combat team, mouse-3 will switch to next neutral team.

v1.4.14.0
FIXES
- Switch worlds to the spawn point before spawning if the spawn point is on a different world (fixes broken tournament resuming on other worlds).
- Use GetRadarAltitudeAtPos instead of radarAltitude as the latter reads wrong for our purposes when underwater.
- Fix the bad check preventing competition start if a vessel doesn't take off.
- Fix NRE in CheckExtend.
- Remove extraneous trajectory simulation when firing a bullet.
- Fix infinite recursion bug in the evolution engine.